

2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

02-Nov-2010 Jean-Marie Simonet
 # [#23071] Provide template_preview.png for both Beez templates. Thanks Michael and Ramindu..

01-Nov-2010 Jean-Marie Simonet
 # [#23085] Improved UI for Article/Category permissions. Thanks Andrea.

-------------------- 1.6.0 Beta13 Release [01-Nov-2010] ------------------

01-Nov-2010 Jean-Marie Simonet
 # [#22658] Flash uploader always shows "Images (...)" text in file selection popup. Thanks Dennis.

01-Nov-2010 Christophe Demko
 # [#21446] Use local storage for the font size changer in the Beez templates (Rouven Weßling)
 # [#22003] Missing onXXXBeforeSave event in com_categories (Andrew Eddie)
 # [#23077] Error (JTableMenu: :store failed - Duplicate entry) when creating 2 menu items with same alias (even in different menus)
 # [#23005] Upgrade TinyMCE to 3.9.2 (Rouven Weßling)
 # [#23059] Incorrect table ordering behavior (Dennis Hermacki)

31-Oct-2010 Christophe Demko
 # [#23073] Module position selection popup does not display administrator positions

31-Oct-2010 Jean-Marie Simonet
 # [#23076] Plugin Edits not checking back in in Bluestork. Thanks Andrea.
 # [#23066] Single edit fix issues in Hathor. Thanks Andrea
 # [#23080] Hathor menu batch copy strings. Thanks Bill.
 
30-Oct-2010 Mark Dexter
# [#21529] Aliases for _adminmenu items [sample data/joomla.sql]
# [#23046] Delete unused vcard files
# Clean out extraneous characters in sample data

30-Oct-2010 Jean-Marie Simonet
 # [#23058] Debug shows language debug info if "Debug Language" is disabled. Thanks Dennis.
 + [#22940] missing images in beez or css wrong. Thanks Bill and Christophe.