@@ -99,7 +99,7 @@ $saveOrder 	= ($listOrder == 'a.lft' && $listDirn == 'asc');
 			foreach ($this->items as $i => $item) :
 				$orderkey	= array_search($item->id, $this->ordering[$item->parent_id]);
 				$canEdit	= $user->authorise('core.edit',			$extension.'.category.'.$item->id);
-				$canCheckin	= $user->authorise('core.manage', 'com_checkin') || $item->checked_out == $userId || $item->checked_out == 0;
+				$canCheckin	= $user->authorise('core.admin', 'com_checkin') || $item->checked_out == $userId || $item->checked_out == 0;
 				$canEditOwn	= $user->authorise('core.edit.own',		$extension.'.category.'.$item->id) && $item->created_user_id == $userId;
 				$canChange	= $user->authorise('core.edit.state',	$extension.'.category.'.$item->id) && $canCheckin;
 				?>
