@@ -28,7 +28,8 @@ $ -> Language fix or change
 ! -> Note
 
 02-Nov-2010 Jean-Marie Simonet
- # [#23071] Provide template_preview.png for both Beez templates. Thanks Michael and Ramindu..
+ # [#23071] Provide template_preview.png for both Beez templates. Thanks Michael and Ramindu.
+ # [#23090] Acl - edit own - message "edit not permitted" in categories. Thanks Christophe.
 
 01-Nov-2010 Jean-Marie Simonet
  # [#23085] Improved UI for Article/Category permissions. Thanks Andrea.
